# hildon-status-menu

./: 15hildon-status-menu  ChangeLog  Makefile.am  README  autogen.sh  configure.ac  hildon-status-menu.desktop.in
debian/: changelog  conffiles  control  hildon-status-menu.init  hildon-status-menu.install  hildon-status-menu.postinst  hildon-status-menu.xsession  launcher  rules
src/: Makefile.am  hd-desktop.c  hd-desktop.h  hd-display.c  hd-display.h  hd-status-area-box.c  hd-status-area-box.h  hd-status-area.c  hd-status-area.h  hd-status-menu-box.c  hd-status-menu-box.h  hd-status-menu-config.h  hd-status-menu.c  hd-status-menu.h  hildon-status-menu-config.schemas  hildon-status-menu.c  status-menu.conf.in  status-menu.plugins.in
